--- a/composer.json
+++ b/composer.json
@@ -21,6 +21,6 @@
 	],
 	"support": {
 		"docs":		"https://www.uaseco.org/documentation/installation.php",
-		"forum":	"https://forum.maniaplanet.com/viewforum.php?f=522",
+		"forum":	"https://forum.maniaplanet.com/viewforum.php?f=522"
 	}
 }
