--- a/composer.json
+++ b/composer.json
@@ -3,7 +3,7 @@
 	"type":		"project",
 	"description":	"UASECO is a fork of the XAseco2/1.03 controller for Trackmania and has been overhauled to support the Modescript Gamemodes of Trackmania² in Maniaplanet and changed to run with PHP/7.x or newer.",
 	"keywords":		["UASECO", "Controller", "Maniaplanet", "Trackmania"],
-	"homepage":		"http://www.uaseco.org/",
+	"homepage":		"https://www.uaseco.org/",
 		"license":	"GPL-3.0",
 	"authors": [
 		{
